--- a/app/.github/workflows/ci.yml
+++ b/app/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main, master, dashboard ]  
+    branches: [ 'master' ]  # CI: Run on all branches
   pull_request:
-    branches: [ main, master ]  
+    branches: [ master ]  # CI: Run on PRs targeting master  
 
 jobs:
   test:
@@ -18,7 +18,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '22'
           cache: 'npm'
           cache-dependency-path: server/package-lock.json
       
@@ -47,11 +47,43 @@ jobs:
           name: coverage-report
           path: server/coverage/
 
+  test-ml:
+    name: Run ML Service Tests
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+          cache: 'pip'
+          cache-dependency-path: ml-service/requirements.txt
+      
+      - name: Install dependencies
+        working-directory: ./ml-service
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      
+      - name: Run tests
+        working-directory: ./ml-service
+        run: pytest tests/ -v --cov=src --cov-report=xml --cov-report=html
+      
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: ml-coverage-report
+          path: ml-service/htmlcov/
+
   build:
     name: Build Docker Images
-    needs: test
+    needs: [test, test-ml]
     runs-on: ubuntu-latest
-    if: github.event_name == 'push'
+    # Run on both PRs (to verify builds) and pushes to master
     
     steps:
       - name: Checkout code
@@ -75,14 +107,23 @@ jobs:
           context: ./client
           push: false
           tags: fitflow-client:${{ github.sha }}
+          no-cache: true
+      
+      - name: Build ML Service Image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./ml-service
+          push: false
+          tags: fitflow-ml-service:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
   docker-hub:
     name: Push to Docker Hub
-    needs: [test, build]
+    needs: [test, test-ml, build]
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
+    # CD: Only push to Docker Hub on merge to master
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     
     steps:
       - name: Checkout code
@@ -116,5 +157,15 @@ jobs:
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/fitflow-client:latest
             ${{ secrets.DOCKER_USERNAME }}/fitflow-client:${{ github.sha }}
+          no-cache: true
+      
+      - name: Build and Push ML Service
+        uses: docker/build-push-action@v5
+        with:
+          context: ./ml-service
+          push: true
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/fitflow-ml-service:latest
+            ${{ secrets.DOCKER_USERNAME }}/fitflow-ml-service:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
