--- a/app/server/Dockerfile
+++ b/app/server/Dockerfile
@@ -1,15 +1,21 @@
-FROM node:18-alpine
+FROM node:23-alpine3.21
 
+# Update Alpine packages for security fixes
+RUN apk update && apk upgrade --no-cache libcrypto3 libssl3
 WORKDIR /app
 
 # Copy package files
 COPY package*.json ./
 
 # Install production dependencies only
-RUN npm ci --only=production
+RUN npm install --only=production
 
 # Copy source code
 COPY . .
+
+# Create uploads directory with correct permissions
+RUN mkdir -p uploads/progress-photos && \
+    chown -R node:node uploads
 
 EXPOSE 5000
 
