--- a/app/server/package.json
+++ b/app/server/package.json
@@ -11,22 +11,21 @@
   },
   "dependencies": {
     "@mistralai/mistralai": "^1.10.0",
+    "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
+    "cross-spawn": "^7.0.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "express-rate-limit": "^6.11.2",
+    "form-data": "^4.0.0",
     "helmet": "^7.2.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.7",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.7",
-    "passport": "^0.7.0",
-    "passport-github2": "^0.1.12",
-    "passport-google-oauth20": "^2.0.0"
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.7"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^5.2.2",
